[gd_scene load_steps=5 format=3 uid="uid://0osqi26wfav4"]

[ext_resource type="Script" path="res://Scripts/Levels.gd" id="1_c4te6"]
[ext_resource type="FontFile" uid="uid://ddku7x1vxdwuq" path="res://Xolonium-Bold.ttf" id="1_fgydi"]
[ext_resource type="Texture2D" uid="uid://whx5vho0hrel" path="res://Images/wp11630931-main-menu-wallpapers.png" id="2_yu2jr"]
[ext_resource type="FontFile" uid="uid://b7dniplmdo5hr" path="res://Images/Xolonium-Bold.ttf" id="4_qd7g3"]

[node name="Levels" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c4te6")

[node name="Wp11630931-main-menu-wallpapers" type="Sprite2D" parent="."]
position = Vector2(970, 512)
scale = Vector2(1.94375, 1.88333)
texture = ExtResource("2_yu2jr")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 60

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="README" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(256, 64)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_fgydi")
theme_override_font_sizes/font_size = 32
text = "READ_ME"

[node name="LEVEL_0" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(256, 64)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.0980392, 0.878431, 0.0862745, 1)
theme_override_fonts/font = ExtResource("1_fgydi")
theme_override_font_sizes/font_size = 32
text = "LEVEL_0
"

[node name="LEVEL_1" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(256, 64)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.0980392, 0.878431, 0.0862745, 1)
theme_override_fonts/font = ExtResource("1_fgydi")
theme_override_font_sizes/font_size = 32
text = "LEVEL_1"

[node name="LEVEL_2" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(256, 64)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.0980392, 0.878431, 0.0862745, 1)
theme_override_fonts/font = ExtResource("4_qd7g3")
theme_override_font_sizes/font_size = 32
text = "LEVEL_2
"

[node name="LEVEL_3" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(256, 64)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_fgydi")
theme_override_font_sizes/font_size = 32
text = "LEVEL_3"

[node name="QUIT" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(256, 64)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.0980392, 0.878431, 0.0862745, 1)
theme_override_fonts/font = ExtResource("1_fgydi")
theme_override_font_sizes/font_size = 32
text = "QUIT
"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="TextEdit" type="TextEdit" parent="."]
visible = false
layout_mode = 0
offset_right = 755.0
offset_bottom = 1091.0
theme_override_fonts/font = ExtResource("1_fgydi")
theme_override_font_sizes/font_size = 32
text = "                              README
1. You can control the camera by clicking the left button on the map.

2. Zooming in and out of the map can be done using the scroll wheel.

3. The point marked with a flag signifies the end of the level.

4. For laptop users, it's recommended to connect the laptop to a power supply.

5. Clicking the README button again will hide this text area from view.

6. The default population is 64.

7. A result of 99999 means that the individual has reached the endpoint.

8. Clicking exit will open the menu window."
editable = false
context_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
wrap_mode = 1

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/README" to="." method="_on_readme_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/LEVEL_0" to="." method="_on_level_0_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/LEVEL_1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/LEVEL_2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/LEVEL_3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/QUIT" to="." method="_on_quit"]
